--- a/styles/globals.css
+++ b/styles/globals.css
@@ -31,7 +31,7 @@
 }
 
 .cover {
-  background-image: url(https://linktr.jersyfi.de/assets/myself-hintergrund.png);
+  background-image: url(../public/img/wallpaper.png);
 }
 
 .picture img {
