--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,17 @@
   }
 }
 
+@layer components {
+  @keyframes glow {
+    from {
+      @apply border-tamarillo-900;
+    }
+    to {
+      @apply border-tamarillo-900/[.40];
+    }
+  }
+}
+
 .bg-gradient-instagram {
   background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
 }
@@ -31,18 +42,5 @@
 }
 
 .cover {
-  background-image: url(../public/img/wallpaper.png);
-}
-
-.picture img {
-  animation: glow 3s infinite alternate ease-in-out;
-}
-
-@keyframes glow {
-  from {
-      outline-color: #f4120e;
-  }
-  to {
-      outline-color: #f4120e3b;
-  }
+  background-image: url(../../public/img/wallpaper.jpg);
 }
