--- a/src/styles/dist.css
+++ b/src/styles/dist.css
@@ -575,6 +575,30 @@ h3 {
   }
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.m-1 {
+  margin: 0.25rem;
+}
+
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
@@ -593,6 +617,10 @@ h3 {
   margin-bottom: 1rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .inline-block {
   display: inline-block;
 }
@@ -605,8 +633,21 @@ h3 {
   display: grid;
 }
 
+.hidden {
+  display: none;
+}
+
 .h-8 {
   height: 2rem;
+}
+
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-\[24px\] {
+  height: 24px;
 }
 
 .min-h-screen {
@@ -620,6 +661,10 @@ h3 {
 
 .w-28 {
   width: 7rem;
+}
+
+.w-\[24px\] {
+  width: 24px;
 }
 
 .w-full {
@@ -695,6 +740,11 @@ h3 {
   border-color: transparent;
 }
 
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-tamarillo-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(131 17 15 / var(--tw-bg-opacity));
@@ -715,9 +765,24 @@ h3 {
   background-color: rgb(205 32 31 / var(--tw-bg-opacity));
 }
 
+.bg-github-800 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(53 67 85 / var(--tw-bg-opacity));
+}
+
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-github-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 27 34 / var(--tw-bg-opacity));
+}
+
+.bg-github-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(57 77 101 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -744,6 +809,21 @@ h3 {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.px-2\.5 {
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+}
+
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
+.py-0 {
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .py-3 {
@@ -783,6 +863,11 @@ h3 {
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.invert {
+  --tw-invert: invert(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .bg-gradient-instagram {
@@ -835,6 +920,11 @@ h3 {
   background-color: rgb(249 113 112 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-github-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(64 93 122 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
@@ -881,6 +971,11 @@ h3 {
   --tw-ring-color: rgb(241 67 66 / var(--tw-ring-opacity));
 }
 
+.focus\:ring-github-700:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(57 77 101 / var(--tw-ring-opacity));
+}
+
 .focus\:ring-gray-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(156 163 175 / var(--tw-ring-opacity));
@@ -891,6 +986,35 @@ h3 {
 }
 
 @media (min-width: 640px) {
+  .sm\:absolute {
+    position: absolute;
+  }
+
+  .sm\:top-0 {
+    top: 0px;
+  }
+
+  .sm\:bottom-0 {
+    bottom: 0px;
+  }
+
+  .sm\:right-0 {
+    right: 0px;
+  }
+
+  .sm\:my-auto {
+    margin-top: auto;
+    margin-bottom: auto;
+  }
+
+  .sm\:ml-0 {
+    margin-left: 0px;
+  }
+
+  .sm\:block {
+    display: block;
+  }
+
   .sm\:w-32 {
     width: 8rem;
   }
