--- a/src/styles/dist.css
+++ b/src/styles/dist.css
@@ -1,5 +1,5 @@
 /*
-! tailwindcss v3.2.4 | MIT License | https://tailwindcss.com
+! tailwindcss v3.2.7 | MIT License | https://tailwindcss.com
 */
 
 /*
@@ -583,10 +583,6 @@ h3 {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
@@ -595,18 +591,22 @@ h3 {
   left: 0px;
 }
 
-.m-1 {
-  margin: 0.25rem;
+.top-0 {
+  top: 0px;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.m-1 {
+  margin: 0.25rem;
 }
 
 .mx-0 {
   margin-left: 0px;
   margin-right: 0px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .mb-2 {
@@ -629,6 +629,10 @@ h3 {
   display: flex;
 }
 
+.table {
+  display: table;
+}
+
 .grid {
   display: grid;
 }
@@ -641,17 +645,29 @@ h3 {
   height: 2rem;
 }
 
+.h-\[24px\] {
+  height: 24px;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
 }
 
-.h-\[24px\] {
-  height: 24px;
-}
-
 .min-h-screen {
   min-height: 100vh;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-\[24px\] {
+  width: 24px;
 }
 
 .w-fit {
@@ -659,20 +675,8 @@ h3 {
   width: fit-content;
 }
 
-.w-28 {
-  width: 7rem;
-}
-
-.w-\[24px\] {
-  width: 24px;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-8 {
-  width: 2rem;
 }
 
 .max-w-screen-sm {
@@ -707,16 +711,16 @@ h3 {
   justify-content: center;
 }
 
-.gap-8 {
-  gap: 2rem;
+.gap-4 {
+  gap: 1rem;
 }
 
 .gap-6 {
   gap: 1.5rem;
 }
 
-.gap-4 {
-  gap: 1rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .rounded-full {
@@ -745,26 +749,6 @@ h3 {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-tamarillo-900 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(131 17 15 / var(--tw-bg-opacity));
-}
-
-.bg-spotify-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(30 215 96 / var(--tw-bg-opacity));
-}
-
-.bg-snapchat-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 252 0 / var(--tw-bg-opacity));
-}
-
-.bg-youtube-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(205 32 31 / var(--tw-bg-opacity));
-}
-
 .bg-github-700 {
   --tw-bg-opacity: 1;
   background-color: rgb(57 77 101 / var(--tw-bg-opacity));
@@ -773,6 +757,26 @@ h3 {
 .bg-gray-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(249 250 251 / var(--tw-bg-opacity));
+}
+
+.bg-snapchat-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 252 0 / var(--tw-bg-opacity));
+}
+
+.bg-spotify-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 215 96 / var(--tw-bg-opacity));
+}
+
+.bg-tamarillo-900 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(131 17 15 / var(--tw-bg-opacity));
+}
+
+.bg-youtube-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(205 32 31 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -796,19 +800,14 @@ h3 {
   padding-right: 0.5rem;
 }
 
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .px-2\.5 {
   padding-left: 0.625rem;
   padding-right: 0.625rem;
 }
 
-.py-0\.5 {
-  padding-top: 0.125rem;
-  padding-bottom: 0.125rem;
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .py-0 {
@@ -816,14 +815,19 @@ h3 {
   padding-bottom: 0px;
 }
 
+.py-0\.5 {
+  padding-top: 0.125rem;
+  padding-bottom: 0.125rem;
+}
+
 .py-3 {
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
 
-.px-4 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -880,34 +884,58 @@ h3 {
   background-image: url(../../public/img/wallpaper.jpg);
 }
 
-.hover\:bg-tamarillo-700:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(206 10 7 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-steam-500:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(77 123 170 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-instagram-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 151 36 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-spotify-300:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(130 243 170 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-snapchat-200:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 255 134 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-youtube-400:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(249 113 112 / var(--tw-bg-opacity));
+.cookify-theme-custom {
+  /* General */
+  --c-text-color: rgb(218, 218, 218);
+  --c-text-title-color: rgb(255, 255, 255);
+  --c-text-by-color: rgba(255, 255, 255, 0.6);
+  --c-border-color: #83110F;
+  --c-border-radius: 0.8rem;
+  --c-bg-primary-color: rgb(16, 16, 16);
+  --c-bg-secondary-color: rgb(23, 23, 23);
+  --c-bg-overlay-color: rgba(0, 0, 0, .6);
+  /* Collapse */
+  --c-c-bar-bg-color: rgb(7, 7, 7);
+  --c-c-bar-bg-hover-color: rgb(29, 29, 29);
+  --c-c-bar-text-color: rgb(131, 131, 131);
+  --c-c-bar-border-radius: 0.8rem;
+  --c-c-bar-badge-bg-color: #83110F;
+  --c-c-bar-badge-text-color: rgb(255, 255, 255);
+  --c-c-bar-badge-border-radius: 0.8rem;
+  --c-c-bar-toggle-off-color: rgb(55, 65, 81);
+  --c-c-bar-toggle-on-color: #83110F;
+  --c-c-bar-toggle-knob-color: rgb(255, 255, 255);
+  --c-c-bar-toggle-ring-color: rgba(131, 17, 15, 0.5);
+  --c-c-extend-bg-color: rgb(23, 23, 23);
+  --c-c-extend-text-color: rgb(218, 218, 218);
+  --c-c-extend-border-color: transparent;
+  --c-c-extend-border-radius: 0.8rem;
+  --c-c-extend-padding: 1.2rem;
+  --c-c-extend-table-bg-header-color: rgb(31, 31, 31);
+  --c-c-extend-table-bg-hover-color: rgb(31, 31, 31);
+  /* Refferenze */
+  --c-ref-border-color: rgb(31, 31, 31);
+  --c-ref-border-radius: 0.8rem;
+  /* Button */
+  --c-btn-strong-bg-color: #83110F;
+  --c-btn-strong-bg-hover-color: rgb(206, 9, 8);
+  --c-btn-strong-text-color: rgb(255, 255, 255);
+  --c-btn-week-bg-color: rgb(0, 0, 0);
+  --c-btn-week-bg-hover-color: rgb(39, 39, 39);
+  --c-btn-week-text-color: rgb(255, 255, 255);
+  --c-btn-border-radius: 2rem;
+  /* Scrollbar */
+  --c-sb-width: 16px;
+  --c-sb-track-color: transparent;
+  --c-sb-thumb-color: #83110F;
+  --c-sb-thumb-hover-color: rgb(206, 9, 8);
+  --c-sb-thumb-border-width: 4px;
+  --c-sb-thumb-border-radius: 8px;
+  /* Opener */
+  --c-open-bg-color: #83110F;
+  --c-open-bg-hover-color: #a11412;
+  --c-open-text-color: rgb(255, 255, 255);
+  --c-open-border-radius: 9999px;
 }
 
 .hover\:bg-github-600:hover {
@@ -918,6 +946,36 @@ h3 {
 .hover\:bg-gray-300:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-instagram-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 151 36 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-snapchat-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 255 134 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-spotify-300:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(130 243 170 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-steam-500:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(77 123 170 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-tamarillo-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(206 10 7 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-youtube-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(249 113 112 / var(--tw-bg-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -931,36 +989,6 @@ h3 {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
-.focus\:ring-tamarillo-600:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(244 18 14 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-steam-400:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(111 152 193 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-instagram-300:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(252 175 69 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-spotify-400:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(69 227 125 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-snapchat-300:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(238 255 65 / var(--tw-ring-opacity));
-}
-
-.focus\:ring-youtube-500:focus {
-  --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(241 67 66 / var(--tw-ring-opacity));
-}
-
 .focus\:ring-github-700:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(57 77 101 / var(--tw-ring-opacity));
@@ -969,6 +997,36 @@ h3 {
 .focus\:ring-gray-400:focus {
   --tw-ring-opacity: 1;
   --tw-ring-color: rgb(156 163 175 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-instagram-300:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(252 175 69 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-snapchat-300:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(238 255 65 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-spotify-400:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(69 227 125 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-steam-400:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(111 152 193 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-tamarillo-600:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(244 18 14 / var(--tw-ring-opacity));
+}
+
+.focus\:ring-youtube-500:focus {
+  --tw-ring-opacity: 1;
+  --tw-ring-color: rgb(241 67 66 / var(--tw-ring-opacity));
 }
 
 .focus\:ring-opacity-75:focus {
@@ -980,16 +1038,16 @@ h3 {
     position: absolute;
   }
 
-  .sm\:top-0 {
-    top: 0px;
-  }
-
   .sm\:bottom-0 {
     bottom: 0px;
   }
 
   .sm\:right-0 {
     right: 0px;
+  }
+
+  .sm\:top-0 {
+    top: 0px;
   }
 
   .sm\:my-auto {
